IUGG abstrct DOI added

--- a/conferences.html
+++ b/conferences.html
@@ -10,7 +10,7 @@ caratula: images/fronts/agumeet.png
 <ul>
   <li>
     <p class="discreet">
-      "Variations of cloud properties ascribed by sea ice states in the Central and Western Arctic".<strong> International Union of Geophysics and Geodesy 2023, 12-19 July 2023, Berlin, Germany.</strong> <a class="external-link" href="https://doi.org/10.22541/essoar.169008271.12504472/v1">10.22541/essoar.169008271.12504472/v1</a></p>
+    "Variations of cloud properties ascribed by sea ice states in the Central and Western Arctic".<strong> XXVIII General Assembly of the International Union of Geodesy and Geophysics (IUGG) 2023, 12-19 July 2023, Berlin, Germany.</strong> Abstract DOI:<a class="external-link" href="https://doi.org/10.57757/IUGG23-3160">10.57757/IUGG23-3160</a>, Presentation DOI:<a class="external-link" href="https://doi.org/10.22541/essoar.169008271.12504472/v1">10.22541/essoar.169008271.12504472/v1</a></p>
   </li>
   <li>
     <p class="discreet">
