add dataset publication, fixed AGU 2022 conference participation

--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,10 @@ title: List of Publications
 <ul><li>
     <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in winter cloud microphysical properties ascribed to sea ice leads in the central Arctic</em>, Atmos. Chem. Phys. Discuss., DOI:<a href="https://doi.org/10.5194/egusphere-2023-623" target="_blank">10.5194/egusphere-2023-623</a>, 2023.
     </p>
-    </li><li>
+<ul><li>
+    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los</strong>:<em>Wintertime Arctic cloud properties coupled to sea ice leads during MOSAiC expedition</em>, Harvard Dataverse, V1, DOI:<a href="https://doi.org/10.7910/DVN/DZSUV7" target="_blank">10.7910/DVN/DZSUV7</a>, 2023.
+    </p>
+</li><li>
     <p class="discreet"><strong>Linke, O., Quaas, J., Baumer, F., Becker, S., Chylik, J., Dahlke, S., Ehrlich, A., Handorf, D., Jacobi, C., Kalesse-Los, H., Lelli, L., Mehrdad, S., Neggers, R. A. J., Riebold, J., <u>Saavedra Garfias, P.</u>, Schnierstein, N., Shupe, M. D., Smith, C., Spreen, G., Verneuil, B., Vinjamuri, K. S., Vountas, M., and Wendisch, M.</strong>: <em>Constraints on simulated past Arctic amplification and lapse-rate feedback from observations</em>, Atmos. Chem. Phys. Discuss., DOI:<a href="https://doi.org/10.5194/acp-2022-836" target="_blank">[preprint]:10.5194/acp-2022-836 , in review</a>, 2023.
     </p>
   </li><li>
