--- a/conferences.html
+++ b/conferences.html
@@ -2,7 +2,7 @@
 layout: withcaratula
 page: conferences
 title: Conference contributions
-vorworte: Selected Contributions on Conferences and Symposiums
+vorworte: Selected Participations on Conferences and Symposiums
 caratula: images/fronts/agumeet.png
 ---
 
@@ -46,6 +46,8 @@ caratula: images/fronts/agumeet.png
 
 <h3><a name="posters"></a>Posters:</h3>
 <ul><li>
+    <p class="discreet"><strong>4th International Summer Snowfall Workshop 2023</strong>, 11-13 September 2023, Leipzig, Germany<br /><strong>Saavedra Garfias P., H. Kalesse-Los, J. Beikert</strong>: <em>Do sea ice conditions have a measurable influence on snowfall? A study based on MOSAiC wintertime observations.</em> DOI: <a href="https://doi.org/10.22541/essoar.169774532.27101629/v1">10.22541/essoar.169774532.27101629/v1</a></p>
+</li><li>
     <p class="discreet"><strong>American Geophysical Union 2022</strong>, 12-16 December 2022, Chicago, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, L. von Albedyll, H. Griesche, G. Spreen</strong>: <em>Cloud Macro-and Microphysical Properties as Coupled to Sea Ice Leads During the MOSAiC Expedition.</em> DOI: <a href="https://doi.org/10.22541/essoar.167397335.54837214/v1">10.22541/essoar.167397335.54837214</a></p>
 </li><li>
     <p class="discreet"><strong>American Geophysical Union 2022</strong>, 12-16 December 2022, Chicago, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, K. Ebell</strong>: <em>Climatology of mixed-phase clouds and their radiative effects when coupled to sea ice; study based from observations at the western Arctic.</em> DOI: <a href="https://doi.org/10.22541/essoar.167457993.38674219/v1">10.22541/essoar.167457993.38674219</a></p>
