--- a/publications.html
+++ b/publications.html
@@ -2,21 +2,21 @@
 layout: withcaratula
 page: publications
 title: List of Publications
-<! -- vorworte: Scientific material I have contributed for publishing in journals and conference proceedings. -->
+vorworte: Contributions to Scientific literature.
 ---
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
-    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in winter cloud microphysical properties ascribed to sea ice leads in the central Arctic</em>, Atmos. Chem. Phys. Discuss., DOI:<a href="https://doi.org/10.5194/egusphere-2023-623" target="_blank">10.5194/egusphere-2023-623</a>, 2023.
+    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in winter cloud microphysical properties ascribed to sea ice leads via water vapour transport in the central Arctic</em>, Atmos. Chem. Phys., <b>ACCEPTED</b>, DOI:<a href="https://doi.org/10.5194/egusphere-2023-623" target="_blank">10.5194/egusphere-2023-623</a>, 2023.
     </p>
-<ul><li>
+</li><li>
     <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los</strong>:<em>Wintertime Arctic cloud properties coupled to sea ice leads during MOSAiC expedition</em>, Harvard Dataverse, V1, DOI:<a href="https://doi.org/10.7910/DVN/DZSUV7" target="_blank">10.7910/DVN/DZSUV7</a>, 2023.
     </p>
 </li><li>
     <p class="discreet"><strong>Linke, O., Quaas, J., Baumer, F., Becker, S., Chylik, J., Dahlke, S., Ehrlich, A., Handorf, D., Jacobi, C., Kalesse-Los, H., Lelli, L., Mehrdad, S., Neggers, R. A. J., Riebold, J., <u>Saavedra Garfias, P.</u>, Schnierstein, N., Shupe, M. D., Smith, C., Spreen, G., Verneuil, B., Vinjamuri, K. S., Vountas, M., and Wendisch, M.</strong>: <em>Constraints on simulated past Arctic amplification and lapse rate feedback from observations</em>, Atmos. Chem. Phys., DOI:<a href="https://acp.copernicus.org/articles/23/9963/2023/" target="_blank">10.5194/acp-23-9963-2023</a>, 2023.
     </p>
   </li><li>
-    <p class="discreet"><strong>Xie X., Xiao, X., He, J., <u>Saavedra Garfias, P.</u>, Li, T., Gu, S., Guo, Y.</strong>: <em>In situ observations of rain rate and precipitation microphysics over the coastal area of South China: Perspectives for satellite validation</em>, AMS Journal of Hydrometeorology, <em>Submitted</em>, 2022.
+    <p class="discreet"><strong>Xie X., Xiao, X., He, J., <u>Saavedra Garfias, P.</u>, Li, T., Gu, S., Guo, Y.</strong>: <em>In situ observations of rain rate and precipitation microphysics over the coastal area of South China: Perspectives for satellite validation</em>, AMS Journal of Hydrometeorology, <em>Under Review</em>, 2022.
     </p>
     </li><li>
     <p class="discreet"><strong>Schimmel, W., Kalesse-Los, H., Maahn, M., Vogl, T., Foth, A., <u>Saavedra Garfias, P.</u>, and Seifert, P.</strong>:
@@ -64,7 +64,8 @@ title: List of Publications
 <p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, T. Rose and C. Simmer</strong>: <em>Characterization of Precipitating Clouds by Ground-Based Measurements with the Triple-Frequency Polarized Microwave Radiometer ADMIRARI</em>, J. Appl. Met. Clim., 49(3), pp. 394-414, 2010.</p>
 </li><li>
 <p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, T. Rose and C. Simmer</strong>: <em>Rain observations by a multi-frequency dual polarized radiometer</em>, IEEE Geo. Rem. Sens. Lett., 6(2), 354-358, 2009.</p>
-</li><li>
+  </li>
+  </ul>
 <!-- <p class="discreet"><strong>Zaratti, F., R. Forno, L. Cuarita and <u>P. Saavedra</u></strong>: <em>Six years measurements of Ozono and UVR in La Paz, Bolivia</em>, Revista Boliviana de Física, No 9, pp. 48-51, 2003, ISSN 1562-3823. (in spanish) (<a title="sobofi_n9" class="internal-link" href="{{site.PDFmiub}}/papers/sobofi_n9">PDF</a>), (<a class="external-link" href="http://www.fiumsa.edu.bo/sobofi/archivos/numero9.pdf">HTML</a>).</p>
 </li><li>
 <p class="discreet"><strong>Ghezzi, F., <u>P. Saavedra</u>, E. Palenque and F. Zaratti</strong>: <em>Analysis of correlation between Solar activity and columnar Ozone at tropical latitudes</em>, Revista Boliviana de Física, No 8, pp. 16-22, 2002, ISSN 1562-3823. (in spanish)(<a title="sobofi_n8" class="internal-link" href="{{site.PDFmiub}}/papers/sobofi_n8">PDF</a>), (<a class="external-link" href="http://www.fiumsa.edu.bo/sobofi/archivos/numero8.pdf">HTML</a>).</p>
@@ -75,7 +76,7 @@ title: List of Publications
     <p class="discreet">
       <strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, K. Ebell </strong>:
       <em>Estimation of Wintertime Cloud Radiative Effects in the Western Arctic, a Function of Cloud-Moisture-Coupl
-ing and Sea Ice Conditions</em>, American Institute of Physics (AIP) Proceedings, <a class="external-link" href="https://aip.scitation.org/apc/info/forthcoming" target="_blank">International Radiation Symposium</a>, <em>Submitted</em>, 2022.
+ing and Sea Ice Conditions</em>, American Institute of Physics (AIP) Proceedings, <a class="external-link" href="https://aip.scitation.org/apc/info/forthcoming" target="_blank">International Radiation Symposium</a>, <em>in Press</em>, 2022.
     </p>
     </li></ul>
 <ul><li>
