fix articles doi link, fix internal link to field campaigns

--- a/publications.html
+++ b/publications.html
@@ -57,9 +57,9 @@ vorworte: Contributions to Scientific literature.
 </li><li>
 <p class="discreet"><strong><u>Saavedra P.</u>, and A. Battaglia </strong>: <em>GPM Ground Validation Advanced Microwave Radiometer Rain Identification (ADMIRARI) GCPEx</em>, Dataset from the NASA EOSDIS Global Hydrology Resource Center Distributed Active Archive Center Huntsville, Alabama, U.S.A., <a title="GCPEx on-line database" href="http://dx.doi.org/10.5067/GPMGV/GCPEX/ADMIRARI/DATA201" target="_blank">on-line</a>, 2012, doi: 10.5067/GPMGV/GCPEX/ADMIRARI/DATA201.</p>
 </li><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>Partitioning of cloud water and rain water content by ground-based observations with the Advanced Microwave Radiometer for Rain Identification (ADMIRARI) in synergy with a micro rain radar</em>, JGR, Atmosphere, 2011, 117,D05203,doi:10.1029/2011JD016382.</p>
+	<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>Partitioning of cloud water and rain water content by ground-based observations with the Advanced Microwave Radiometer for Rain Identification (ADMIRARI) in synergy with a micro rain radar</em>, JGR, Atmosphere, 2012, 117,D05203, doi:<a href="https://doi.org/10.1029/2011JD016579" target="_blank">10.1029/2011JD016579</a>.</p>
 </li><li>
-<p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, C. A. Morales and C. Simmer</strong>: <em>Understanding 3D effects in polarized observations with the ground-based ADMIRARI radiometer during the CHUVA campaign</em>, JGR, Atmosphere , 2011, 116:D09204, 2011, doi:10.1029/2010JD015335.</p>
+	<p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, C. A. Morales and C. Simmer</strong>: <em>Understanding 3D effects in polarized observations with the ground-based ADMIRARI radiometer during the CHUVA campaign</em>, JGR, Atmosphere , 2011, 116:D09204, 2011, doi:<a href="https://doi.org/10.1029/2010JD015335" target="_blank">10.1029/2010JD015335</a>.</p>
 </li><li>
 <p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, T. Rose and C. Simmer</strong>: <em>Characterization of Precipitating Clouds by Ground-Based Measurements with the Triple-Frequency Polarized Microwave Radiometer ADMIRARI</em>, J. Appl. Met. Clim., 49(3), pp. 394-414, 2010.</p>
 </li><li>
