ACP paper changed from egusphere to final publication

--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@ vorworte: Contributions to Scientific literature.
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
-    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in winter cloud microphysical properties ascribed to sea ice leads via water vapour transport in the central Arctic</em>, Atmos. Chem. Phys., <b>ACCEPTED</b>, DOI:<a href="https://doi.org/10.5194/egusphere-2023-623" target="_blank">10.5194/egusphere-2023-623</a>, 2023.
+    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in cloud microphysical properties ascribed to sea ice leads via water vapour transport in the central Arctic</em>, Atmos. Chem. Phys., DOI:<a href="https://doi.org/10.5194/acp-23-14521-2023" target="_blank">10.5194/acp-23-14521-2023</a>, 2023.
     </p>
 </li><li>
     <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los</strong>:<em>Wintertime Arctic cloud properties coupled to sea ice leads during MOSAiC expedition</em>, Harvard Dataverse, V1, DOI:<a href="https://doi.org/10.7910/DVN/DZSUV7" target="_blank">10.7910/DVN/DZSUV7</a>, 2023.
