AGU2023 added, BlueSky link added, LIM position adjusted

--- a/conferences.html
+++ b/conferences.html
@@ -10,6 +10,10 @@ caratula: images/fronts/agumeet.png
 <ul>
   <li>
     <p class="discreet">
+    "Long-term statistical analysis of wintertime cloud thermodynamic phase and micro-physical properties in relation to sea ice condition at NSA Utqiaǵvik site".<strong> American Geophysical Union 2023, 11-15 December 2023, San Francisco, USA.</strong> Presentation DOI:<a class="external-link" href="https://essopenarchive.org/users/552406">ESSopenarchive</a></p>
+  </li>
+  <li>
+    <p class="discreet">
     "Variations of cloud properties ascribed by sea ice states in the Central and Western Arctic".<strong> XXVIII General Assembly of the International Union of Geodesy and Geophysics (IUGG) 2023, 12-19 July 2023, Berlin, Germany.</strong> Abstract DOI:<a class="external-link" href="https://doi.org/10.57757/IUGG23-3160">10.57757/IUGG23-3160</a>, Presentation DOI:<a class="external-link" href="https://doi.org/10.22541/essoar.169008271.12504472/v1">10.22541/essoar.169008271.12504472/v1</a></p>
   </li>
   <li>
@@ -45,9 +49,16 @@ caratula: images/fronts/agumeet.png
 </li></ul> <em>(*): Invited speaker</em>
 
 <h3><a name="posters"></a>Posters:</h3>
-<ul><li>
+<ul>
+  <li>
+    <p class="discreet"><strong> American Geophysical Union 2023</strong>, 11-15 December 2023, San Francisco, USA.<br />
+      <strong>Saavedra Garfias P., H. Kalesse-Los, J. Beikert, T. Seelig</strong>:
+      <em>"The role of water vapor transport and sea ice leads on Arctic mixed-phase clouds during MOSAiC"</em>. DOI:<a class="external-link" href="https://doi.org/10.22541/essoar.170431102.26299753/v1">10.22541/essoar.170431102.26299753/v1</a></p>
+  </li>
+  <li>
     <p class="discreet"><strong>4th International Summer Snowfall Workshop 2023</strong>, 11-13 September 2023, Leipzig, Germany<br /><strong>Saavedra Garfias P., H. Kalesse-Los, J. Beikert</strong>: <em>Do sea ice conditions have a measurable influence on snowfall? A study based on MOSAiC wintertime observations.</em> DOI: <a href="https://doi.org/10.22541/essoar.169774532.27101629/v1">10.22541/essoar.169774532.27101629/v1</a></p>
-</li><li>
+  </li>
+  <li>
     <p class="discreet"><strong>American Geophysical Union 2022</strong>, 12-16 December 2022, Chicago, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, L. von Albedyll, H. Griesche, G. Spreen</strong>: <em>Cloud Macro-and Microphysical Properties as Coupled to Sea Ice Leads During the MOSAiC Expedition.</em> DOI: <a href="https://doi.org/10.22541/essoar.167397335.54837214/v1">10.22541/essoar.167397335.54837214</a></p>
 </li><li>
     <p class="discreet"><strong>American Geophysical Union 2022</strong>, 12-16 December 2022, Chicago, USA<br /><strong>Saavedra Garfias P., H. Kalesse-Los, K. Ebell</strong>: <em>Climatology of mixed-phase clouds and their radiative effects when coupled to sea ice; study based from observations at the western Arctic.</em> DOI: <a href="https://doi.org/10.22541/essoar.167457993.38674219/v1">10.22541/essoar.167457993.38674219</a></p>
