added final link and doi for IRS AIP proceeding

--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@ vorworte: Contributions to Scientific literature.
     <p class="discreet">
       <strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, K. Ebell </strong>:
       <em>Estimation of Wintertime Cloud Radiative Effects in the Western Arctic, a Function of Cloud-Moisture-Coupl
-ing and Sea Ice Conditions</em>, American Institute of Physics (AIP) Proceedings, <a class="external-link" href="https://aip.scitation.org/apc/info/forthcoming" target="_blank">International Radiation Symposium</a>, <em>in Press</em>, 2022.
+ing and Sea Ice Conditions</em>, Radiation Processes in the Atmosphere and Ocean, American Institute of Physics (AIP) Proceedings, DOI: <a class="external-link" href="https://doi.org/10.1063/5.0182751" target="_blank">10.1063/5.0182751</a>, 2024.
     </p>
     </li></ul>
 <ul><li>
