add Xinxin AMS paper. Fix pubs. minor bugs

--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,16 @@ vorworte: Contributions to Scientific literature.
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
+    <p class="discreet"><strong>Xie X., Xiao, X., He, J., <u>Saavedra Garfias, P.</u>, Li, T., Yu, X., Gu, S., Guo, Y.</strong>: <em>In situ observations of rain rate and precipitation microphysics over the coastal area of South China: Perspectives for satellite validation</em>, AMS J. Hydrometeor., DOI: <a class="external-link" href="https://doi.org/10.1175/JHM-D-22-0227.1" target="_blank">10.1175/JHM-D-22-0227.1</a>, 2024.
+    </p>
+    </li><li>
+    <p class="discreet">
+      <strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, K. Ebell </strong>:
+      <em>Estimation of Wintertime Cloud Radiative Effects in the Western Arctic, a Function of Cloud-Moisture-Coupl
+ing and Sea Ice Conditions</em>, Radiation Processes in the Atmosphere and Ocean, American Institute of Physics (AIP) Proceedings, DOI: <a class="external-link" href="https://doi.org/10.1063/5.0182751" target="_blank">10.1063/5.0182751</a>, 2024.
+    </p>
+    </li></ul>
+    <ul><li>
     <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in cloud microphysical properties ascribed to sea ice leads via water vapour transport in the central Arctic</em>, Atmos. Chem. Phys., DOI:<a href="https://doi.org/10.5194/acp-23-14521-2023" target="_blank">10.5194/acp-23-14521-2023</a>, 2023.
     </p>
 </li><li>
@@ -16,9 +26,6 @@ vorworte: Contributions to Scientific literature.
     <p class="discreet"><strong>Linke, O., Quaas, J., Baumer, F., Becker, S., Chylik, J., Dahlke, S., Ehrlich, A., Handorf, D., Jacobi, C., Kalesse-Los, H., Lelli, L., Mehrdad, S., Neggers, R. A. J., Riebold, J., <u>Saavedra Garfias, P.</u>, Schnierstein, N., Shupe, M. D., Smith, C., Spreen, G., Verneuil, B., Vinjamuri, K. S., Vountas, M., and Wendisch, M.</strong>: <em>Constraints on simulated past Arctic amplification and lapse rate feedback from observations</em>, Atmos. Chem. Phys., DOI:<a href="https://acp.copernicus.org/articles/23/9963/2023/" target="_blank">10.5194/acp-23-9963-2023</a>, 2023.
     </p>
   </li><li>
-    <p class="discreet"><strong>Xie X., Xiao, X., He, J., <u>Saavedra Garfias, P.</u>, Li, T., Gu, S., Guo, Y.</strong>: <em>In situ observations of rain rate and precipitation microphysics over the coastal area of South China: Perspectives for satellite validation</em>, AMS Journal of Hydrometeorology, <em>Under Review</em>, 2022.
-    </p>
-    </li><li>
     <p class="discreet"><strong>Schimmel, W., Kalesse-Los, H., Maahn, M., Vogl, T., Foth, A., <u>Saavedra Garfias, P.</u>, and Seifert, P.</strong>:
         <em>Identifying cloud droplets beyond lidar attenuation from vertically-pointing cloud radar observations using artificial neural networks</em>,
         Atmospheric Measurement Techniques, 15, doi:<a href="https://doi.org/10.5194/amt-15-5343-2022" target="_blank">10.5194/amt-15-5343-2022</a>, 2022.
@@ -73,13 +80,6 @@ vorworte: Contributions to Scientific literature.
 <dl><dt>
     <h3>Proceedings:</h3>
     <ul><li>
-    <p class="discreet">
-      <strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, K. Ebell </strong>:
-      <em>Estimation of Wintertime Cloud Radiative Effects in the Western Arctic, a Function of Cloud-Moisture-Coupl
-ing and Sea Ice Conditions</em>, Radiation Processes in the Atmosphere and Ocean, American Institute of Physics (AIP) Proceedings, DOI: <a class="external-link" href="https://doi.org/10.1063/5.0182751" target="_blank">10.1063/5.0182751</a>, 2024.
-    </p>
-    </li></ul>
-<ul><li>
     <p class="discreet">
       <strong><u>Saavedra Garfias, P.</u>, Bhandari A., Reuder J., Imaki M., Kotake N. and Kameyama Sh.</strong>:
       <em>Comparison and investigation on the lidar-measured turbulence intensities in the measurement campaign using two independent lidars.
