add Xinxin paper; add googlescholar; layout adjustments; add zenodo

--- a/publications.html
+++ b/publications.html
@@ -3,6 +3,7 @@ layout: withcaratula
 page: publications
 title: List of Publications
 vorworte: Contributions to Scientific literature.
+icons: {googlescholar, researchgate, orcid}
 ---
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
