--- a/publications.html
+++ b/publications.html
@@ -8,72 +8,94 @@ icons: {googlescholar, researchgate, orcid}
 
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
-    <p class="discreet"><strong>Xie X., Xiao, X., He, J., <u>Saavedra Garfias, P.</u>, Li, T., Yu, X., Gu, S., Guo, Y.</strong>: <em>In situ observations of rain rate and precipitation microphysics over the coastal area of South China: Perspectives for satellite validation</em>, AMS J. Hydrometeor., DOI: <a class="external-link" href="https://doi.org/10.1175/JHM-D-22-0227.1" target="_blank">10.1175/JHM-D-22-0227.1</a>, 2024.
-    </p>
-    </li><li>
-    <p class="discreet">
-      <strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, K. Ebell </strong>:
-      <em>Estimation of Wintertime Cloud Radiative Effects in the Western Arctic, a Function of Cloud-Moisture-Coupl
+		<p class="discreet">
+		<strong><u>Saavedra Garfias, P.</u>, and H. Kalesse-Los</strong>: <em>Observed modulation of Arctic mixed-phase cloud properties by sea ice conditions and their long-term climatological trends</em>, Atmos. Chem. Phys., NOTE:<i> Manuscript being reviewed</i>, 2024.
+		</p>
+	</li><li>
+		<p class="discreet"><strong>Foth, A., Lochmann, M., <u>Saavedra Garfias, P.</u>, Kalesse-Los, H. </strong>: <em>Determination of low-level temperature profiles from microwave radiometer observations during rain</em>, Atomos. Meas. Tech., DOI: <a class="external-link" href="https://doi.org/10.5194/amt-17-7169-2024" target="_blank">10.5194/amt-17-7169-2024</a>, 2024.
+		</p>
+	</li><li>
+		<p class="discreet"><strong>Xie X., Xiao, X., He, J., <u>Saavedra Garfias, P.</u>, Li, T., Yu, X., Gu, S., Guo, Y.</strong>: <em>In situ observations of rain rate and precipitation microphysics over the coastal area of South China: Perspectives for satellite validation</em>, AMS J. Hydrometeor., DOI: <a class="external-link" href="https://doi.org/10.1175/JHM-D-22-0227.1" target="_blank">10.1175/JHM-D-22-0227.1</a>, 2024.
+		</p>
+	</li><li>
+	<p class="discreet">
+	<strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, K. Ebell </strong>:
+	<em>Estimation of Wintertime Cloud Radiative Effects in the Western Arctic, a Function of Cloud-Moisture-Coupl
 ing and Sea Ice Conditions</em>, Radiation Processes in the Atmosphere and Ocean, American Institute of Physics (AIP) Proceedings, DOI: <a class="external-link" href="https://doi.org/10.1063/5.0182751" target="_blank">10.1063/5.0182751</a>, 2024.
-    </p>
-    </li></ul>
-    <ul><li>
-    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in cloud microphysical properties ascribed to sea ice leads via water vapour transport in the central Arctic</em>, Atmos. Chem. Phys., DOI:<a href="https://doi.org/10.5194/acp-23-14521-2023" target="_blank">10.5194/acp-23-14521-2023</a>, 2023.
-    </p>
-</li><li>
-    <p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los</strong>:<em>Wintertime Arctic cloud properties coupled to sea ice leads during MOSAiC expedition</em>, Harvard Dataverse, V1, DOI:<a href="https://doi.org/10.7910/DVN/DZSUV7" target="_blank">10.7910/DVN/DZSUV7</a>, 2023.
-    </p>
-</li><li>
-    <p class="discreet"><strong>Linke, O., Quaas, J., Baumer, F., Becker, S., Chylik, J., Dahlke, S., Ehrlich, A., Handorf, D., Jacobi, C., Kalesse-Los, H., Lelli, L., Mehrdad, S., Neggers, R. A. J., Riebold, J., <u>Saavedra Garfias, P.</u>, Schnierstein, N., Shupe, M. D., Smith, C., Spreen, G., Verneuil, B., Vinjamuri, K. S., Vountas, M., and Wendisch, M.</strong>: <em>Constraints on simulated past Arctic amplification and lapse rate feedback from observations</em>, Atmos. Chem. Phys., DOI:<a href="https://acp.copernicus.org/articles/23/9963/2023/" target="_blank">10.5194/acp-23-9963-2023</a>, 2023.
-    </p>
-  </li><li>
-    <p class="discreet"><strong>Schimmel, W., Kalesse-Los, H., Maahn, M., Vogl, T., Foth, A., <u>Saavedra Garfias, P.</u>, and Seifert, P.</strong>:
-        <em>Identifying cloud droplets beyond lidar attenuation from vertically-pointing cloud radar observations using artificial neural networks</em>,
-        Atmospheric Measurement Techniques, 15, doi:<a href="https://doi.org/10.5194/amt-15-5343-2022" target="_blank">10.5194/amt-15-5343-2022</a>, 2022.
-    </p>
-  </li><li>
-    <p class="discreet"><strong>Schalge, B., Baroni, G., Haese, B., Erdal, D., Geppert, G., <u>Saavedra, P.</u>, Haefliger, V., Vereecken, H., Attinger, S., Kunstmann, H., Cirpka, O. A., Ament, F., Kollet, S., Neuweiler, I., Hendricks Franssen, H.-J., and Simmer, C.</strong>:
-      <em>Presentation and discussion of the high-resolution atmosphere–land-surface–subsurface simulation dataset of the simulated Neckar catchment for the period 2007–2015</em>,
-      Earth Syst. Sci. Data, doi:<a href="https://doi.org/10.5194/essd-13-4437-2021" target="_blank">10.5194/essd-13-4437-2021</a>, 2021.
-    </p>
-  </li><li>
-    <p class="discreet">
-      <strong>Cheynet, E., Flügge, M., Reuder, J., Jakobsen, J. B., Heggelund, Y., Svardal, B., <u>Saavedra Garfias, P.</u>, Obhrai, C., Daniotti, N., Berge, J., Duscha, C., Wildmann, N., Onarheim, I. H., and Godvik, M.</strong>: <em>The COTUR project: remote sensing of offshore turbulence for wind energy application</em>, Atmos. Meas. Tech., 14, 6137–6157, doi:<a href="https://doi.org/10.5194/amt-14-6137-2021" target="_blank">10.5194/amt-14-6137-2021</a>, 2021.
-    </p>
-  </li><li>
-    <p class="discreet"><strong>Pejcic V., <u>Saavedra Garfias P.</u>, Mühlbauer K., Trömel S., and C. Simmer</strong>:
-      <em>Comparison between precipitation estimates of ground-based weather radar composites and GPM’s DPR rainfall product over Germany</em>,
-      Meteorologische Zeitschrift (METZ), <em>07, 2020. </em><a href="http://dx.doi.org/10.1127/metz/2020/1039" target="_blank">doi:10.1127/metz/2020/1039</a>
-    </p>
-</li><li>
-    <p class="discreet"><strong>Lv Sh., Schalge B., <u>Saavedra Garfias P.</u>, and C. Simmer</strong>:
+	</p>
+	</li></ul>
+	<ul><li>
+			<p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los, L. von Albedyll, H. Griesche, and G. Spreen</strong>: <em>Asymmetries in cloud microphysical properties ascribed to sea ice leads via water vapour transport in the central Arctic</em>, Atmos. Chem. Phys., DOI:<a href="https://doi.org/10.5194/acp-23-14521-2023" target="_blank">10.5194/acp-23-14521-2023</a>, 2023.
+			</p>
+		</li><li>
+		<p class="discreet"><strong><u>Saavedra Garfias, P.</u>, H. Kalesse-Los</strong>:<em>Wintertime Arctic cloud properties coupled to sea ice leads during MOSAiC expedition</em>, Harvard Dataverse, V1, DOI:<a href="https://doi.org/10.7910/DVN/DZSUV7" target="_blank">10.7910/DVN/DZSUV7</a>, 2023.
+		</p>
+		</li><li>
+		<p class="discreet"><strong>Linke, O., Quaas, J., Baumer, F., Becker, S., Chylik, J., Dahlke, S., Ehrlich, A., Handorf, D., Jacobi, C., Kalesse-Los, H., Lelli, L., Mehrdad, S., Neggers, R. A. J., Riebold, J., <u>Saavedra Garfias, P.</u>, Schnierstein, N., Shupe, M. D., Smith, C., Spreen, G., Verneuil, B., Vinjamuri, K. S., Vountas, M., and Wendisch, M.</strong>: <em>Constraints on simulated past Arctic amplification and lapse rate feedback from observations</em>, Atmos. Chem. Phys., DOI:<a href="https://acp.copernicus.org/articles/23/9963/2023/" target="_blank">10.5194/acp-23-9963-2023</a>, 2023.
+		</p>
+		</li><li>
+		<p class="discreet"><strong>Schimmel, W., Kalesse-Los, H., Maahn, M., Vogl, T., Foth, A., <u>Saavedra Garfias, P.</u>, and Seifert, P.</strong>:
+		<em>Identifying cloud droplets beyond lidar attenuation from vertically-pointing cloud radar observations using artificial neural networks</em>,
+		Atmospheric Measurement Techniques, 15, doi:<a href="https://doi.org/10.5194/amt-15-5343-2022" target="_blank">10.5194/amt-15-5343-2022</a>, 2022.
+		</p>
+		</li><li>
+		<p class="discreet"><strong>Schalge, B., Baroni, G., Haese, B., Erdal, D., Geppert, G., <u>Saavedra, P.</u>, Haefliger, V., Vereecken, H., Attinger, S., Kunstmann, H., Cirpka, O. A., Ament, F., Kollet, S., Neuweiler, I., Hendricks Franssen, H.-J., and Simmer, C.</strong>:
+		<em>Presentation and discussion of the high-resolution atmosphere–land-surface–subsurface simulation dataset of the simulated Neckar catchment for the period 2007–2015</em>,
+		Earth Syst. Sci. Data, doi:<a href="https://doi.org/10.5194/essd-13-4437-2021" target="_blank">10.5194/essd-13-4437-2021</a>, 2021.
+		</p>
+		</li><li>
+		<p class="discreet">
+		<strong>Cheynet, E., Flügge, M., Reuder, J., Jakobsen, J. B., Heggelund, Y., Svardal, B., <u>Saavedra Garfias, P.</u>, Obhrai, C., Daniotti, N., Berge, J., Duscha, C., Wildmann, N., Onarheim, I. H., and Godvik, M.</strong>: <em>The COTUR project: remote sensing of offshore turbulence for wind energy application</em>, Atmos. Meas. Tech., 14, 6137–6157, doi:<a href="https://doi.org/10.5194/amt-14-6137-2021" target="_blank">10.5194/amt-14-6137-2021</a>, 2021.
+		</p>
+		</li><li>
+		<p class="discreet">
+		<strong>Pejcic V., <u>Saavedra Garfias P.</u>, Mühlbauer K., Trömel S., and C. Simmer</strong>:
+		<em>Comparison between precipitation estimates of ground-based weather radar composites and GPM’s DPR rainfall product over Germany</em>,
+		Meteorologische Zeitschrift (METZ), <em>07, 2020. </em><a href="http://dx.doi.org/10.1127/metz/2020/1039" target="_blank">doi:10.1127/metz/2020/1039</a>
+		</p>
+		</li><li>
+		<p class="discreet">
+		<strong>Lv Sh., Schalge B., <u>Saavedra Garfias P.</u>, and C. Simmer</strong>:
       <em>Required sampling-density of ground-based soil moisture and brightness temperature observations for calibration/validation of L-band satellite observations based on a virtual reality</em>,
       Journal Hydrology and Earth System Sciences (HESS), <a href="https://www.hydrol-earth-syst-sci.net/24/1957/2020/" target="_blank">doi.org/10.5194/hess-24-1957-2020</a>
-    </p>
-  </li><li>
-    <p class="discreet"><strong>Schalge, Bernd; Baroni, Gabriele; Haese, Barbara; Erdal, Daniel; Geppert, Gernot; <u>Saavedra, Pablo</u>; Haefliger, Vincent; Vereecken, Harry; Attinger, Sabine; Kunstmann, Harald; Cirpka, Olaf A.; Ament, Felix; Kollet, Stefan; Neuweiler, Insa; Hendricks Franssen, Harrie-Jan; Simmer, Clemens (2020)</strong>.
-      <em>Virtual catchment simulation based on the Neckar region. World Data Center for Climate (WDCC) at DKRZ</em>.
-      doi:<a href="https://doi.org/10.26050/WDCC/Neckar_VCS_v1" target="_blank">10.26050/WDCC/Neckar_VCS_v1</a>
-    </p>
-</li><li>
-    <p class="discreet"><strong><u>Saavedra P.</u>, and C. Simmer </strong>:
-      <em>An Octave/MATLAB Interface For Rapid Processing SMOS L1C Full Polarization Brightness Temperature</em>,
-      Journal of Open Research Software <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">(JORS)</a>, 6(1) p.2., 2018, doi:<a href="http://doi.org/10.5334/jors.165" target="_blank">doi.org/10.5334/jors.165</a>
-    </p>
-</li><li>
-<p class="discreet"><strong>Xie X., Evaristo R., Troemel S., <u>Saavedra P.</u> and C. Simmer</strong>: <em>Radar observation of evaporation and implications for rainfall precipitation and cooling rate estimation</em>, J. Atmos. Ocea. Tech., 2016, doi:10.1175/JTECH-D-15-0244.1.</p>
-</li><li>
-<p class="discreet"><strong><u>Saavedra P.</u>, and A. Battaglia </strong>: <em>GPM Ground Validation Advanced Microwave Radiometer Rain Identification (ADMIRARI) GCPEx</em>, Dataset from the NASA EOSDIS Global Hydrology Resource Center Distributed Active Archive Center Huntsville, Alabama, U.S.A., <a title="GCPEx on-line database" href="http://dx.doi.org/10.5067/GPMGV/GCPEX/ADMIRARI/DATA201" target="_blank">on-line</a>, 2012, doi: 10.5067/GPMGV/GCPEX/ADMIRARI/DATA201.</p>
-</li><li>
-	<p class="discreet"><strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>Partitioning of cloud water and rain water content by ground-based observations with the Advanced Microwave Radiometer for Rain Identification (ADMIRARI) in synergy with a micro rain radar</em>, JGR, Atmosphere, 2012, 117,D05203, doi:<a href="https://doi.org/10.1029/2011JD016579" target="_blank">10.1029/2011JD016579</a>.</p>
-</li><li>
-	<p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, C. A. Morales and C. Simmer</strong>: <em>Understanding 3D effects in polarized observations with the ground-based ADMIRARI radiometer during the CHUVA campaign</em>, JGR, Atmosphere , 2011, 116:D09204, 2011, doi:<a href="https://doi.org/10.1029/2010JD015335" target="_blank">10.1029/2010JD015335</a>.</p>
-</li><li>
-<p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, T. Rose and C. Simmer</strong>: <em>Characterization of Precipitating Clouds by Ground-Based Measurements with the Triple-Frequency Polarized Microwave Radiometer ADMIRARI</em>, J. Appl. Met. Clim., 49(3), pp. 394-414, 2010.</p>
-</li><li>
-<p class="discreet"><strong>Battaglia, A., <u>P. Saavedra</u>, T. Rose and C. Simmer</strong>: <em>Rain observations by a multi-frequency dual polarized radiometer</em>, IEEE Geo. Rem. Sens. Lett., 6(2), 354-358, 2009.</p>
-  </li>
-  </ul>
+		</p>
+		</li><li>
+			<p class="discreet">
+			<strong>Schalge, Bernd; Baroni, Gabriele; Haese, Barbara; Erdal, Daniel; Geppert, Gernot; <u>Saavedra, Pablo</u>; Haefliger, Vincent; Vereecken, Harry; Attinger, Sabine; Kunstmann, Harald; Cirpka, Olaf A.; Ament, Felix; Kollet, Stefan; Neuweiler, Insa; Hendricks Franssen, Harrie-Jan; Simmer, Clemens (2020)</strong>.
+			<em>Virtual catchment simulation based on the Neckar region. World Data Center for Climate (WDCC) at DKRZ</em>.
+			doi:<a href="https://doi.org/10.26050/WDCC/Neckar_VCS_v1" target="_blank">10.26050/WDCC/Neckar_VCS_v1</a>
+			</p>
+		</li><li>
+			<p class="discreet">
+			<strong><u>Saavedra P.</u>, and C. Simmer </strong>:
+			<em>An Octave/MATLAB Interface For Rapid Processing SMOS L1C Full Polarization Brightness Temperature</em>,
+			Journal of Open Research Software <a title="JORS on-line database" href="https://openresearchsoftware.metajnl.com">(JORS)</a>, 6(1) p.2., 2018, doi:<a href="http://doi.org/10.5334/jors.165" target="_blank">doi.org/10.5334/jors.165</a>
+			</p>
+		</li><li>
+			<p class="discreet">
+			<strong>Xie X., Evaristo R., Troemel S., <u>Saavedra P.</u> and C. Simmer</strong>: <em>Radar observation of evaporation and implications for rainfall precipitation and cooling rate estimation</em>, J. Atmos. Ocea. Tech., 2016, doi:10.1175/JTECH-D-15-0244.1.</p>
+		</li><li>
+			<p class="discreet">
+			<strong><u>Saavedra P.</u>, and A. Battaglia </strong>: <em>GPM Ground Validation Advanced Microwave Radiometer Rain Identification (ADMIRARI) GCPEx</em>, Dataset from the NASA EOSDIS Global Hydrology Resource Center Distributed Active Archive Center Huntsville, Alabama, U.S.A., <a title="GCPEx on-line database" href="http://dx.doi.org/10.5067/GPMGV/GCPEX/ADMIRARI/DATA201" target="_blank">on-line</a>, 2012, doi: 10.5067/GPMGV/GCPEX/ADMIRARI/DATA201.
+			</p>
+		</li><li>
+			<p class="discreet">
+			<strong><u>Saavedra P.</u>, Battaglia A. and C. Simmer</strong>: <em>Partitioning of cloud water and rain water content by ground-based observations with the Advanced Microwave Radiometer for Rain Identification (ADMIRARI) in synergy with a micro rain radar</em>, JGR, Atmosphere, 2012, 117,D05203, doi:<a href="https://doi.org/10.1029/2011JD016579" target="_blank">10.1029/2011JD016579</a>.
+			</p>
+		</li><li>
+			<p class="discreet">
+			<strong>Battaglia, A., <u>P. Saavedra</u>, C. A. Morales and C. Simmer</strong>: <em>Understanding 3D effects in polarized observations with the ground-based ADMIRARI radiometer during the CHUVA campaign</em>, JGR, Atmosphere , 2011, 116:D09204, 2011, doi:<a href="https://doi.org/10.1029/2010JD015335" target="_blank">10.1029/2010JD015335</a>.
+			</p>
+		</li><li>
+			<p class="discreet">
+			<strong>Battaglia, A., <u>P. Saavedra</u>, T. Rose and C. Simmer</strong>: <em>Characterization of Precipitating Clouds by Ground-Based Measurements with the Triple-Frequency Polarized Microwave Radiometer ADMIRARI</em>, J. Appl. Met. Clim., 49(3), pp. 394-414, 2010.
+			</p>
+		</li><li>
+			<p class="discreet">
+			<strong>Battaglia, A., <u>P. Saavedra</u>, T. Rose and C. Simmer</strong>: <em>Rain observations by a multi-frequency dual polarized radiometer</em>, IEEE Geo. Rem. Sens. Lett., 6(2), 354-358, 2009.
+			</p>
+		</li>
+	</ul>
 <!-- <p class="discreet"><strong>Zaratti, F., R. Forno, L. Cuarita and <u>P. Saavedra</u></strong>: <em>Six years measurements of Ozono and UVR in La Paz, Bolivia</em>, Revista Boliviana de Física, No 9, pp. 48-51, 2003, ISSN 1562-3823. (in spanish) (<a title="sobofi_n9" class="internal-link" href="{{site.PDFmiub}}/papers/sobofi_n9">PDF</a>), (<a class="external-link" href="http://www.fiumsa.edu.bo/sobofi/archivos/numero9.pdf">HTML</a>).</p>
 </li><li>
 <p class="discreet"><strong>Ghezzi, F., <u>P. Saavedra</u>, E. Palenque and F. Zaratti</strong>: <em>Analysis of correlation between Solar activity and columnar Ozone at tropical latitudes</em>, Revista Boliviana de Física, No 8, pp. 16-22, 2002, ISSN 1562-3823. (in spanish)(<a title="sobofi_n8" class="internal-link" href="{{site.PDFmiub}}/papers/sobofi_n8">PDF</a>), (<a class="external-link" href="http://www.fiumsa.edu.bo/sobofi/archivos/numero8.pdf">HTML</a>).</p>
