--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,7 @@ icons: {googlescholar, researchgate, orcid}
 <h3 name="peer-reviewed-articles">Peer Reviewed:</h3>
 <ul><li>
 		<p class="discreet">
-		<strong><u>Saavedra Garfias, P.</u>, and H. Kalesse-Los</strong>: <em>Observed modulation of Arctic mixed-phase cloud properties by sea ice conditions and their long-term climatological trends</em>, Atmos. Chem. Phys., NOTE:<i> Manuscript being reviewed</i>, 2024.
+		<strong><u>Saavedra Garfias, P.</u>, and H. Kalesse-Los</strong>: <em>Observed modulation of wintertime Western Arctic mixed-phase cloud properties by sea ice conditions, their long-term variabilities and trends</em>, EGUsphere, DOI: <a class="external-link" href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-2327/" target="_blank">10.5194/egusphere-2025-2327</a>, 2025.
 		</p>
 	</li><li>
 		<p class="discreet"><strong>Foth, A., Lochmann, M., <u>Saavedra Garfias, P.</u>, Kalesse-Los, H. </strong>: <em>Determination of low-level temperature profiles from microwave radiometer observations during rain</em>, Atomos. Meas. Tech., DOI: <a class="external-link" href="https://doi.org/10.5194/amt-17-7169-2024" target="_blank">10.5194/amt-17-7169-2024</a>, 2024.
